# RG11-pokematf

./: .clang-format.yaml  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  Pokemon  README.md  cmake_install.cmake  coverage-info  dconfig  formatScript.py  image.cpp  image.h  main.cpp  pokematf.cpp  pokematf.h
docs/html/: annotated.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_212efe9a2e9757eefc3997d1e4dd1fc1.html  dir_3691830ddf3d1e96666e00edbaacb315.html  dir_3e6ff93101a7373e88f7ca0cd529072b.html  dir_5252a317a3cd54bfb3fab7923c19c3e8.html  dir_90b540a60f6d4c7f903393b3db9eca71.html  dir_b93f020123a4c1d9a9126eccfc6e107c.html  dir_c33ebe384d72fd0f01a8f4e9cc41e6ad.html  dir_c77e15675604b92c88bf4b7ff904f4b7.html  dir_e6464ce20b9a6f3984c488adcb19fdfe.html  dir_e681c888114da6c476fe889c582dab40.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  pages.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  (+55 more)
docs/latex/: annotated.tex  dir_017ad5e908c41501f6a06b5119b37293.tex  dir_3691830ddf3d1e96666e00edbaacb315.tex  dir_5252a317a3cd54bfb3fab7923c19c3e8.tex  dir_b93f020123a4c1d9a9126eccfc6e107c.tex  dir_c33ebe384d72fd0f01a8f4e9cc41e6ad.tex  dir_c77e15675604b92c88bf4b7ff904f4b7.tex  dir_e681c888114da6c476fe889c582dab40.tex  files.tex  refman.tex
logs/gcov/: index-sort-f.html  index-sort-l.html  index.html
(+158 files in other folders)
